# parallel_bfs

./: .gitignore  CMakeLists.txt  boost_mpi_extra.h  generator.cpp  kronecker.cpp  main.cpp  parallel_bfs.cpp  parallel_bfs.h
